// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Locales: should render with locale of AU first and active 1`] = `
<nav
  aria-label="country"
  role="navigation"
>
  <ul
    class="Locales__list"
  >
    <li>
      <span
        class="Locales__locale_isActive"
      >
        AU
      </span>
    </li>
    <li>
      <a
        class="Locales__localeLink"
        data-analytics="header:nz+homepage"
        href="https://www.seek.co.nz"
        title="SEEK New Zealand"
      >
        NZ
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Locales: should render with locale of NZ first and active 1`] = `
<nav
  aria-label="country"
  role="navigation"
>
  <ul
    class="Locales__list Locales__list_isNZ"
  >
    <li>
      <a
        class="Locales__localeLink"
        data-analytics="header:au+homepage"
        href="https://www.seek.com.au"
        title="SEEK Australia"
      >
        AU
      </a>
    </li>
    <li>
      <span
        class="Locales__locale_isActive"
      >
        NZ
      </span>
    </li>
  </ul>
</nav>
`;
